@@ -16,7 +16,7 @@ define( 'CAWEB_DIVI_VERSION', wp_get_theme( 'Divi' )->get( 'Version' ) );
 define( 'CAWEB_CA_STATE_PORTAL_CDN_URL', 'https://california.azureedge.net/cdt/CAgovPortal' );
 define( 'CAWEB_EXTERNAL_DIR', sprintf( '%1$s/%2$s-ext', WP_CONTENT_DIR, strtolower( wp_get_theme()->stylesheet ) ) );
 define( 'CAWEB_EXTERNAL_URI', content_url( sprintf( '%1$s-ext', strtolower( wp_get_theme()->stylesheet ) ) ) );
-define( 'CAWEB_MINIMUM_SUPPORTED_TEMPLATE_VERSION', 5.5);
+define( 'CAWEB_MINIMUM_SUPPORTED_TEMPLATE_VERSION', 5.5 );
 define( 'CAWEB_SUPPORTED_TEMPLATE_VERSIONS', array( 5.5 ) );
 define( 'CAWEB_BETA_TEMPLATE_VERSIONS', array() );
 
@@ -33,6 +33,7 @@ if ( ! file_exists( WP_TEMP_DIR ) ) {
  * @link https://codex.wordpress.org/Plugin_API/Action_Reference#Actions_Run_During_a_Typical_Request
  */
 add_action( 'after_setup_theme', 'caweb_setup_theme', 11 );
+add_action( 'send_headers', 'caweb_enable_hsts' );
 add_action( 'init', 'caweb_init' );
 add_action( 'pre_get_posts', 'caweb_pre_get_posts', 11 );
 add_action( 'get_header', 'caweb_get_header' );
@@ -78,25 +79,27 @@ if ( is_child_theme() && 'Divi' === wp_get_theme()->get( 'Template' ) ) {
 /**
  * CAWeb After Setup Theme
  *
- * @link https://codex.wordpress.org/Plugin_API/Action_Reference/after_setup_theme
  * Sets up theme defaults and registers support for various WordPress features.
  *
  * Note that this function is hooked into the after_setup_theme hook, which
  * runs before the init hook. The init hook is too late for some features, such
  * as indicating support for post thumbnails.
  *
+ * @link https://codex.wordpress.org/Plugin_API/Action_Reference/after_setup_theme
+ *
+ * @category add_action( 'after_setup_theme', 'caweb_setup_theme', 11 );
  * @return void
  */
 function caweb_setup_theme() {
 	/* Include CAWeb Functionality */
 	foreach ( glob( __DIR__ . '/inc/*.php' ) as $file ) {
 		// if file is live-drafts functionality.
-		if( strpos($file,'live-drafts.php') ){
+		if ( strpos( $file, 'live-drafts.php' ) ) {
 			// check if CAWeb Live Drafts is enabled before including.
-			if( get_option( 'caweb_live_drafts', false ) ){
+			if ( get_option( 'caweb_live_drafts', false ) ) {
 				require_once $file;
 			}
-		}else{
+		} else {
 			require_once $file;
 		}
 	}
@@ -210,17 +213,19 @@ function caweb_setup_theme() {
 		}
 	}
 
-	// Remove Divi viewport meta
+	// Remove Divi viewport meta.
 	remove_action( 'wp_head', 'et_add_viewport_meta' );
 }
 
 /**
  * Enables the HTTP Strict Transport Security (HSTS) header in WordPress.
+ *
+ * @category add_action( 'send_headers', 'caweb_enable_hsts' );
+ * @return void
  */
 function caweb_enable_hsts() {
 	header( 'Strict-Transport-Security: max-age=10886400; includeSubDomains' );
 }
-add_action( 'send_headers', 'caweb_enable_hsts' );
 
 /**
  * CAWeb Init
@@ -228,6 +233,7 @@ add_action( 'send_headers', 'caweb_enable_hsts' );
  * Note, this does not just run on user-facing admin screens.
  * It runs on admin-ajax.php and admin-post.php as well.
  *
+ * @category add_action( 'init', 'caweb_init' );
  * @link https://codex.wordpress.org/Plugin_API/Action_Reference/admin_init
  * @return void
  */
@@ -248,10 +254,10 @@ function caweb_init() {
 /**
  * CAWeb Pre Get Posts
  *
- *  @link https://developer.wordpress.org/reference/hooks/pre_get_posts/
- *
  * Fires after the query variable object is created, but before the actual query is run.
  *
+ * @link https://developer.wordpress.org/reference/hooks/pre_get_posts/
+ * @category add_action( 'pre_get_posts', 'caweb_pre_get_posts', 11 );
  * @param WP_Query $query The WP Query Instance.
  * @return WP_Query
  */
@@ -270,6 +276,7 @@ function caweb_pre_get_posts( $query ) {
 /**
  * Add template header if using Divi Custom Type 'Project
  *
+ * @category add_action( 'get_header', 'caweb_get_header' );
  * @link https://developer.wordpress.org/reference/hooks/get_header/
  * @param  string $name Name of the specific header file to use. null for the default header.
  *
@@ -287,9 +294,11 @@ function caweb_get_header( $name = null ) {
 /**
  * Register Parent Theme styles.css
  *
+ * Fires when scripts and styles are enqueued.
+ *
  * @link https://developer.wordpress.org/reference/hooks/wp_enqueue_scripts/
  *
- * Fires when scripts and styles are enqueued.
+ * @category add_action( 'wp_enqueue_scripts', 'caweb_wp_enqueue_parent_scripts' );
  * @return void
  */
 function caweb_wp_enqueue_parent_scripts() {
@@ -300,9 +309,11 @@ function caweb_wp_enqueue_parent_scripts() {
 /**
  * Register CAWeb Theme scripts/styles with priority of 15
  *
+ * Fires when scripts and styles are enqueued.
+ *
+ * @category add_action( 'wp_enqueue_scripts', 'caweb_wp_enqueue_scripts', 15 );
  * @link https://developer.wordpress.org/reference/hooks/wp_enqueue_scripts/
  *
- * Fires when scripts and styles are enqueued.
  * @return void
  */
 function caweb_wp_enqueue_scripts() {
@@ -395,9 +406,10 @@ function caweb_wp_enqueue_scripts() {
 /**
  * Register CAWeb Theme scripts/styles with priority of 115
  *
- * @link https://developer.wordpress.org/reference/hooks/wp_enqueue_scripts/
- *
  * Fires when scripts and styles are enqueued.
+ *
+ * @link https://developer.wordpress.org/reference/hooks/wp_enqueue_scripts/
+ * @category add_action( 'wp_enqueue_scripts', 'caweb_late_wp_enqueue_scripts', 115 );
  * @return void
  */
 function caweb_late_wp_enqueue_scripts() {
@@ -444,7 +456,7 @@ function caweb_late_wp_enqueue_scripts() {
  * Prints scripts or data in the head tag on the front end.
  *
  * @link https://developer.wordpress.org/reference/hooks/wp_head/
- * @todo Move script to Divi Accessibility Script and remove function
+ * @category add_action( 'wp_head', 'caweb_wp_head' );
  * @return void
  */
 function caweb_wp_head() {
@@ -462,6 +474,7 @@ function caweb_wp_head() {
  * CAWeb Footer
  *
  * @link https://codex.wordpress.org/Plugin_API/Action_Reference/wp_footer
+ * @category add_action( 'wp_footer', 'caweb_wp_footer', 11 );
  * @return void
  */
 function caweb_wp_footer() {
@@ -489,6 +502,7 @@ function caweb_wp_footer() {
  * It runs on admin-ajax.php and admin-post.php as well.
  *
  * @link https://codex.wordpress.org/Plugin_API/Action_Reference/admin_init
+ * @category add_action( 'admin_init', 'caweb_admin_init' );
  * @return void
  */
 function caweb_admin_init() {
@@ -509,7 +523,7 @@ function caweb_admin_init() {
  * CAWeb Admin Enqueue Scripts and Styles
  *
  * @link https://developer.wordpress.org/reference/hooks/admin_enqueue_scripts/
- *
+ * @category add_action( 'admin_enqueue_scripts', 'caweb_admin_enqueue_scripts', 15 );
  * @param  string $hook The current admin page.
  *
  * @return void
@@ -584,7 +598,7 @@ function caweb_admin_enqueue_scripts( $hook ) {
  * Fires once a post has been saved.
  *
  * @link https://developer.wordpress.org/reference/hooks/save_post/
- *
+ * @category add_action( 'save_post', 'caweb_save_post_list_meta', 10, 2 );
  * @param  int     $post_id Post ID.
  * @param  WP_POST $post Post object.
  *
@@ -646,8 +660,8 @@ function caweb_save_post_list_meta( $post_id, $post ) {
 
 	wp_set_object_terms( $post_id, $cats, 'category' );
 
-	/* 
-		The 'nginx_cache_purge' custom meta field was used on the old MCS system, 
+	/*
+		The 'nginx_cache_purge' custom meta field was used on the old MCS system,
 		if the page/post has this field delete it.
 	*/
 	delete_post_meta( $post_id, 'nginx_cache_purge' );
